# virtuboi_c

./: CMakeLists.txt  LICENSE
code/: CMakeLists.txt
code/inc/: cartridge.h  cartridgeLookup.h  dmg_emu.h  includes.h  instruction.h  mmu.h  terminator.h  utils.h
code/src/: cartridge.c  dmg_emu.c  instruction.c  main.c  mmu.c  terminator.c  utils.c
